correction iphone 6

--- a/css/styles.css
+++ b/css/styles.css
@@ -1048,8 +1048,8 @@ a {
     height: 38px;
   }
   .boldfont {
-    padding-right: 16px;
-    font-size: 17px;
+    padding-right: 10px;
+    font-size: 14px;
   }
 
   /***Les hébergements***/
